# call_assistant

./: .dockerignore  .gitignore  LICENSE  RAG_ANSWER_METHOD.md  RAG_SYSTEM_DOCUMENTATION.md  README.md  SCRAPER_README.md  __main__.py  cli.py  docker-compose.yml  render.yaml  requirements.txt  run.py  setup.cfg  setup.py  test_rag_answer.py
app/: __init__.py  convo.py  rag.py  routes.py
app/backend/: Dockerfile  convo.py  ngrok_control.py  rag.py  routes.py  scraper.py  settings.py
app/backend/configs/: routes.py  services.py  settings.py
app/backend/llm_rag/: llm.py  rag_pipeline.py
app/backend/llm_rag/extraction/: base_extractor.py  file_extractor.py  web_extractor.py
app/backend/voice/: convo.py  ngrok_control.py
app/frontend/: .dockerignore  package-lock.json
app/frontend/src/: App.css  App.tsx  DocIn.tsx  MainPage.tsx  SettingsPage.tsx
demo/: demo_rag.py  demo_rag_answer.py
docs/: RAG_ANSWER_METHOD.md  RAG_SYSTEM_DOCUMENTATION.MD
test/: test_rag_answer.py
