[metadata]
name = ai-call-mvp
version = 0.1.0
description = AI-powered call handling MVP
long_description = file: README.md
long_description_content_type = text/markdown
author = Abhay Kashyap
author_email = abhay.kashyap03@gmail.com
url = https://github.com/abhaykashyap03/ITS_bot.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask
    twilio
    openai
    google-generativeai
    sentence-transformers
    faiss-cpu
    beautifulsoup4
    pydub
    whisper
    python-dotenv
    pytest
    ngrok
    requests
    markdown

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    ai-call-cli = cli:main

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy
